# security-playbooks

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  DISCLAIMER.md  Dockerfile  MAINTAINERS  MANIFEST.in  MANIFEST.yaml  Makefile  README.md  ROADMAP.md  SBOM.md  SECURITY.md  SUPPORT.md  VERSION  dev-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  trivyignore
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good-first-issue.md  good_first_issue.md  performance_issue.yml  security_issue.yml
.github/workflows/: ci.yml  codeql.yml  ossar.yml  pylint.yml  secret-scan.yml
dashboards/: README.md
demo/: README.md  ioc_detection_demo.py
detection-rules/: README.md  index.md
detection-rules/mappings/: coverage-matrix.md
detection-rules/sigma/: sigma_powershell_exec.yml  suspicious_login.yml
detection-rules/suricata/: network_alert.rules  powershell_alert.rules
detection-rules/yara/: malware_sample.yar
docs/: FAQ.md  README.md  faq.md  glossary.md  lifecycle.md  mitre_mapping.md  overview.md  quick_start.md  quickstart.md  roadmap.md
docs/Legal/: ETHICS.md  ethics.md
docs/architecture/: architecture.md  detection-validation.md  system-design.md  threat-model.md
examples/: malware_log_example.txt
playbooks/: README.md  index.md  playbook-guide.md
validation/: README.md
(+21 files in other folders)
